scalable_mimes_iconsdir = join_paths(mimes_iconsdir, 'scalable')

regular_files = [
    # DO NOT REMOVE: Begining of regular segment
    'android-package-archive.svg',
    'application-epub+zip.svg',
    'application-json.svg',
    'application-octet-stream.svg',
    'application-pgp-encrypted.svg',
    'application-pgp-keys.svg',
    'application-pgp-signature.svg',
    'application-pkix-cert.svg',
    'application-postscript.svg',
    'application-toml.svg',
    'application-vnd.comicbook+zip.svg',
    'application-vnd.flatpak.svg',
    'application-vnd.iccprofile.svg',
    'application-vnd.snap.svg',
    'application-x-audacity-project.svg',
    'application-x-bittorrent.svg',
    'application-x-cd-image.svg',
    'application-x-deb.svg',
    'application-x-godot-project.svg',
    'application-x-iso9600-appimage.svg',
    'application-x-java-archive.svg',
    'application-x-model.svg',
    'application-x-perl.svg',
    'application-x-php.svg',
    'application-x-python-bytecode.svg',
    'application-x-rpm.svg',
    'application-x-theme.svg',
    'application-x-xopp.svg',
    'application-x-yaml.svg',
    'application-xml.svg',
    'text-css.svg',
    'text-rust.svg',
    'text-x-c.svg',
    'text-x-chdr.svg',
    'text-x-cpp.svg',
    'text-x-cpphdr.svg',
    'text-x-csharp.svg',
    'text-x-diff.svg',
    'text-x-go.svg',
    'text-x-java.svg',
    'text-x-javascript.svg',
    'text-x-lua.svg',
    'text-x-makefile.svg',
    'text-x-markdown.svg',
    'text-x-meson.svg',
    'text-x-patch.svg',
    'text-x-python.svg',
    'text-x-r-markdown.svg',
    'text-x-r.svg',
    'text-x-ruby.svg',
    'text-x-script.svg',
    'text-x-sql.svg',
    'text-x-tex.svg',
    'text-x-typescript.svg',
    'text-x-vala.svg',
    'virtualbox-hdd.svg',
    'virtualbox-ova.svg',
    'virtualbox-ovf.svg',
    'virtualbox-vbox-extpack.svg',
    'virtualbox-vbox.svg',
    'virtualbox-vdi.svg',
    'virtualbox-vhd.svg',
    'virtualbox-vmdk.svg',
    # DO NOT REMOVE: End of regular segment
]

link_files = {
    # DO NOT REMOVE: Begining of link segment
    'text-x-tex.svg': [
        'text-x-texinfo.svg',
    ],
    'text-x-python.svg': [
        'text-x-python3.svg',
    ],
    'application-x-php.svg': [
        'text-x-php.svg',
    ],
    'text-x-c.svg': [
        'text-x-csrc.svg',
    ],
    'text-x-cpphdr.svg': [
        'text-x-c++hdr.svg',
    ],
    'text-x-cpp.svg': [
        'text-x-c++.svg',
        'text-x-c++src.svg',
        'text-x-cppsrc.svg',
    ],
    'text-x-markdown.svg': [
        'text-markdown.svg',
    ],
    'text-css.svg': [
        'text-less.svg',
        'text-x-css.svg',
        'text-x-less.svg',
        'text-x-sass.svg',
        'text-x-scss.svg',
    ],
    'text-x-makefile.svg': [
        'gnome-mime-text-x-makefile.svg',
        'text-x-cmake.svg',
    ],
    'application-x-xopp.svg': [
        'application-x-xopt.svg',
        'gnome-mime-application-x-xopp.svg',
        'gnome-mime-application-x-xopt.svg',
    ],
    'virtualbox-vmdk.svg': [
        'application-x-virtualbox-vmdk.svg',
    ],
    'virtualbox-vhd.svg': [
        'application-x-virtualbox-vhd.svg',
    ],
    'virtualbox-vdi.svg': [
        'application-x-virtualbox-vdi.svg',
    ],
    'virtualbox-vbox.svg': [
        'application-x-virtualbox-vbox.svg',
    ],
    'virtualbox-vbox-extpack.svg': [
        'application-x-virtualbox-vbox-extpack.svg',
    ],
    'virtualbox-ovf.svg': [
        'application-x-virtualbox-ovf.svg',
    ],
    'virtualbox-ova.svg': [
        'application-x-virtualbox-ova.svg',
    ],
    'virtualbox-hdd.svg': [
        'application-x-virtualbox-hdd.svg',
    ],
    'application-x-rpm.svg': [
        'application-x-source-rpm.svg',
    ],
    'text-x-ruby.svg': [
        'application-x-ruby.svg',
        'text-ruby.svg',
    ],
    'text-x-r.svg': [
        'application-x-rdata.svg',
        'text-x-r-source.svg',
    ],
    'text-x-script.svg': [
        'application-x-ptoptimizer-script.svg',
        'application-x-shellscript.svg',
    ],
    'application-x-bittorrent.svg': [
        'application-x-kgetlist.svg',
    ],
    'application-pgp-encrypted.svg': [
        'application-x-keepass.svg',
        'application-x-keepass2.svg',
        'application-x-keepassx.svg',
        'application-x-keepassxc.svg',
        'multipart-encrypted.svg',
    ],
    'application-x-java-archive.svg': [
        'application-x-jar.svg',
    ],
    'application-x-godot-project.svg': [
        'application-x-gdscript.svg',
        'application-x-godot-resource.svg',
        'application-x-godot-scene.svg',
        'application-x-godot-shader.svg',
    ],
    'application-octet-stream.svg': [
        'application-x-firmware.svg',
        'application-x-msdownload.svg',
        'text-x-hex.svg',
    ],
    'application-x-theme.svg': [
        'application-x-e-theme.svg',
        'application-x-emerald-theme.svg',
        'application-x-ktheme.svg',
        'application-x-windows-themepack.svg',
    ],
    'application-postscript.svg': [
        'application-x-bzpostscript.svg',
        'application-x-gzpostscript.svg',
    ],
    'text-x-patch.svg': [
        'application-x-bps-patch.svg',
        'application-x-bsdiff.svg',
        'application-x-ips-patch.svg',
    ],
    'application-x-model.svg': [
        'application-x-blender.svg',
        'model-obj.svg',
        'model-stl.svg',
        'model-x-stl-binary.svg',
        'model-x.stl-ascii.svg',
        'model-x.stl-binary.svg',
    ],
    'application-x-audacity-project.svg': [
        'application-x-audacity-project+sqlite3.svg',
    ],
    'application-x-cd-image.svg': [
        'application-vnd.squashfs.svg',
        'application-x-apple-diskimage.svg',
        'application-x-raw-disk-image.svg',
        'gnome-mime-application-x-nero-disk-image.svg',
        'nero-disk-image.svg',
    ],
    'application-x-deb.svg': [
        'application-vnd.debian.binary-package.svg',
    ],
    'application-vnd.comicbook+zip.svg': [
        'application-vnd.comicbook-rar.svg',
        'application-x-cb7.svg',
        'application-x-cba.svg',
        'application-x-cbr.svg',
        'application-x-cbt.svg',
        'application-x-cbz.svg',
    ],
    'application-x-iso9600-appimage.svg': [
        'application-vnd.appimage.svg',
    ],
    'application-epub+zip.svg': [
        'application-vnd.amazon.mobi8-ebook.svg',
        'application-x-fictionbook+xml.svg',
        'application-x-fictionbook.svg',
        'application-x-mobi8-ebook.svg',
        'application-x-mobipocket-ebook.svg',
        'application-x-zip-compressed-fb2.svg',
        'x-content-ebook-reader.svg',
    ],
    'text-x-typescript.svg': [
        'application-typescript.svg',
        'application-x-typescript.svg',
    ],
    'text-x-sql.svg': [
        'application-sql.svg',
        'application-vnd.oasis.opendocument.database-template.svg',
        'application-vnd.oasis.opendocument.database.svg',
        'application-vnd.sqlite2.svg',
        'application-vnd.sqlite3.svg',
        'application-x-dbf.svg',
        'application-x-gdbm.svg',
        'application-x-kexi-connectiondata.svg',
        'application-x-kexiproject-sqlite2.svg',
        'application-x-kexiproject-sqlite3.svg',
        'application-x-sqlite2.svg',
        'application-x-sqlite3.svg',
        'libreoffice-database.svg',
        'libreoffice-oasis-database.svg',
        'office-database.svg',
        'openoffice4-database.svg',
        'openoffice4-oasis-database.svg',
        'qgis-sqlite.svg',
    ],
    'application-pgp-signature.svg': [
        'application-pkcs7-signature.svg',
        'multipart-signed.svg',
    ],
    'application-pgp-keys.svg': [
        'application-pgp.svg',
        'application-pkcs8.svg',
        'application-x-pem-key.svg',
        'org.keepassxc.KeePassXC-application-x-keepassxc.svg',
    ],
    'text-x-javascript.svg': [
        'application-javascript.svg',
        'application-x-javascript.svg',
        'text-javascript.svg',
    ],
    'text-x-java.svg': [
        'application-java.svg',
        'application-x-java-applet.svg',
        'application-x-java.svg',
        'text-x-java-source.svg',
    ],
    'application-pkix-cert.svg': [
        'application-certificate.svg',
        'application-pkcs10.svg',
        'application-pkcs12.svg',
        'application-pkcs7-mime.svg',
        'application-x-pkcs12.svg',
        'application-x-pkcs7-certificates.svg',
        'application-x-pkcs7.svg',
        'application-x-x509-ca-cert.svg',
        'application-x-x509-user-cert.svg',
    ],
    'application-xml.svg': [
        'application-atom+xml.svg',
        'application-metalink+xml.svg',
        'application-metalink4+xml.svg',
        'application-owl+xml.svg',
        'application-rss+xml.svg',
        'application-xslt+xml.svg',
        'text-rdf+xml.svg',
        'text-xml.svg',
    ],
    'android-package-archive.svg': [
        'application-apk.svg',
        'application-vnd.android.package-archive.svg',
    ],
    # DO NOT REMOVE: End of link segment
}

install_data(regular_files, install_dir: scalable_mimes_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: scalable_mimes_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
